style: add style to ensure better usability on small screens

--- a/board_code/user_story_template.css
+++ b/board_code/user_story_template.css
@@ -288,8 +288,6 @@
 }
 
 .addTask-icons_user-story {
-  width: 17px;
-  height: 7px;
   filter: brightness(0) saturate(100%) invert(54%) sepia(93%) saturate(2158%)
     hue-rotate(3deg) brightness(103%) contrast(103%);
 }
