--- a/styles/board-technical.css
+++ b/styles/board-technical.css
@@ -39,7 +39,7 @@
   width: 528px;
   border-radius: 30px;
   gap: 24px;
-
+  font-size: 18px;
   margin-top: 0px;
   padding-top: 39px;
 }
