--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -362,27 +362,35 @@ body::-webkit-scrollbar {
     padding-left: 0 !important;
     left: 17px !important;
   }
-    .side-overlay.open .side-panel {
-    height: 100vh !important;
-    max-width: 100vw;
-    border-top-left-radius: 0 !important;
-    border-bottom-left-radius: 0 !important;
-  }
-  .priority-btn-medium-addTask_template, 
-  .priority-btn-urgent-addTask_template, 
-  .priority-btn-low-addTask_template {
-    height: 65px !important;
-}
 }
 
 @media (max-width: 398px) {
   .h1_privacy_policy {
     font-size: 25px !important;
   }
+  .priority-btn-medium-addTask_template, 
+  .priority-btn-urgent-addTask_template, 
+  .priority-btn-low-addTask_template {
+    height: 65px !important;
+}
   .h2_privacy_policy {
     font-size: 17px !important;
   }
+
   .h2_what_is_Join {
     font-size: 25px;
+  }
+   #task-modal {
+    backdrop-filter: none !important;
+    background: #ffffff !important;
+    justify-content: flex-start !important;
+  }
+
+  #task-modal-content {
+    width: 100vw !important;
+    height: 100vh !important;
+    max-height: 100vh !important;
+    border-radius: 0 !important;
+    border: 0 !important;
   }
 }
